--- a/backend/.env
+++ b/backend/.env
@@ -1,21 +1,17 @@
 CURRENCY = "Ugx"
-JWT_SECRET="Mediclinic"
+JWT_SECRET="medichospital"
 
 # Admin Panel Credentials
 ADMIN_EMAIL = "admin@gmail.com"
 ADMIN_PASSWORD = "JOSE560jose@#"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "------ MongoDB URI here ------"
+MONGODB_URI = mongodb+srv://josephinenanyonga389:JOSE560jose@booking.wn7lx.mongodb.net
+
+
 
 # Cloudinary Setup ( required )
-CLOUDINARY_NAME = "------ Cloudinary Name here ------"
-CLOUDINARY_API_KEY = "------ Cloudinary API key here ------"
-CLOUDINARY_SECRET_KEY = "------ Cloudinary Secret key here ------"
+CLOUDINARY_NAME = 'dfn7wm0q3'
+CLOUDINARY_API_KEY = '965678729466951'
+CLOUDINARY_SECRET_KEY = 'BoLyXcEqyV8Iq-6PEKKn4MqaMq0'
 
-# Razorpay Payment Integration
-RAZORPAY_KEY_ID = "------ Razorpay Key Id here ------"
-RAZORPAY_KEY_SECRET = "------ Razorpay Key Secret here ------"
-
-# Stripe Payment Integration
-STRIPE_SECRET_KEY="------ Stripe Secret Key here ------"
