--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "nodemon": "^3.1.4",
     "razorpay": "^2.9.4",
     "stripe": "^16.5.0",
+    "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
   }
 }
