--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_BACKEND_URL = 'https://booking-app-1-sxuk.onrender.com'
 
-REACT_APP_ADMIN_PANEL_URL=https://medicare2.onrender.com
+REACT_APP_ADMIN_PANEL_URL='https://medicare2.onrender.com'
 
